python/testData/inspections/PyUnresolvedReferencesInspection/PrivateModuleNames/a.py
from lib import *

normal_name
<error descr="Unresolved reference '_private_name'">_private_name</error>
<error descr="Unresolved reference '__magic_name__'">__magic_name__</error>